update: package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
-dist/*
-!dist/.gitkeep
+# dependencies
+/node_modules
+
+# IDE
+/.idea
+/.awcache
+/.vscode
+
+# misc
+npm-debug.log
+.DS_Store
+
+# tests
+/test
+/coverage
+/.nyc_output
+
+# dist
+dist
