--- a/package.json
+++ b/package.json
@@ -1,37 +1,76 @@
 {
-  "name": "@pardjs/nest-casbin",
-  "version": "0.0.5",
-  "description": "",
-  "repository": "https://github.com/pardjs/nest-casbin",
+  "name": "nestjs-casbin-typeorm",
+  "version": "0.0.6",
+  "description": "NestJS Casbin module with TypeORM Adapter",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pardjs/nest-casbin"
+  },
   "main": "dist/index.js",
+  "keywords": [
+    "nestjs",
+    "casbin",
+    "TypeORM"
+  ],
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "test": "jest --passWithNoTests",
-    "lint": "tslint -c ./tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c ./tslint.json 'lib/**/*.ts'",
     "commit": "npm run lint && npm run test && git add . && npx git-cz",
     "prepublish": "npm run build",
     "postversion": "npm publish"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": ">= 8.9.0"
+  },
+  "dependencies": {
+    "typeorm-adapter": "^1.0.2"
+  },
+  "peerDependencies": {
+    "casbin": "^3.0.4",
+    "@nestjs/common": "^6.0.0"
+  },
   "devDependencies": {
-    "@types/jest": "^24.0.6",
+    "@nestjs/common": "^6.0.0",
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.7.1",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.7.5",
+    "@types/supertest": "^2.0.8",
+    "casbin": "^3.0.4",
+    "codecov": "^3.5.0",
     "cz-conventional-changelog": "^2.1.0",
-    "jest": "^24.1.0",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.1.1",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.5.3"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "diagnostics": false
+      }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "@nestjs/common": "^5.7.2",
-    "casbin": "^2.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.4.0",
-    "typeorm-adapter": "^1.0.2"
   }
 }
