--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc -p tsconfig.json",
     "test": "jest --passWithNoTests",
-    "lint": "tslint -c ./tslint.json 'lib/**/*.ts'",
-    "commit": "npm run lint && npm run test && git add . && npx git-cz",
-    "prepublish": "npm run build",
-    "postversion": "npm publish"
+    "lint": "eslint 'lib/**/*.ts' --fix",
+    "prepublish:npm": "npm run build",
+    "publish:npm": "npm publish --access public"
   },
   "engines": {
     "node": ">= 8.9.0"
@@ -39,6 +38,11 @@
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-import": "2.20.1",
     "casbin": "^3.0.4",
     "codecov": "^3.5.0",
     "cz-conventional-changelog": "^2.1.0",
