--- a/package.json
+++ b/package.json
@@ -25,33 +25,31 @@
     "node": ">= 8.9.0"
   },
   "dependencies": {
-    "typeorm-adapter": "^1.4.2"
+    "typeorm-adapter": "^1.6.1"
   },
   "peerDependencies": {
-    "casbin": "^5.14.0",
-    "@nestjs/common": "^8.4.3"
+    "@nestjs/common": "^10.2.6",
+    "typeorm": "^0.3.17",
+    "casbin": "^5.14.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.6.11",
-    "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.0.0",
-    "@types/jest": "^25.2.1",
+    "@nestjs/common": "^10.2.6",
+    "@nestjs/testing": "^10.2.6",
+    "@types/jest": "^29.5.5",
     "@types/node": "^12.7.5",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
-    "casbin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "codecov": "^3.7.1",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "jest": "^29.3.1",
-    "ts-jest": "^25.3.1",
-    "ts-loader": "^6.1.1",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "eslint": "8.50.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   },
   "jest": {
     "globals": {
